# kaggle-rsna-breast-cancer

./: .gitignore  Makefile  mypy.ini  pyproject.toml
.github/hooks/: .pre-commit-config.yml
.github/workflows/: build.yml
notebooks/: differentiable_pfbeta.ipynb  roi.ipynb
src/: conftest.py  preparation.py
src/cli/: prepare_data.py  profile_data.py  train_dummy.py
src/lib/: cv.py  data.py  eda.py  lightning_model.py  metrics.py
src/lib/tests/: test_cv.py  test_dataset.py  test_eda.py  test_lightning_modules.py  test_metrics.py
src/nn/: classifier.py  data.py  lightning_model.py
src/nn/models/: dummy.py
src/nn/tests/: test_classifier.py  test_data.py  test_lightning_modules.py
src/tests/: mock_test_data.csv  mock_train_data.csv  test_preparation.py
src/tests/mock_dicoms/10008/: 200779059.dcm
src/util/: __init__.py  logs.py
