[tool.poetry]
name = "kaggle-rsna-breast-cancer"
version = "0.1.0"
description = "Kaggle RSNA breat cancer detection"
authors = [""]

[tool.poetry.dependencies]
jupyter = "^1.0.0"
pandas = "^1.4.2"
pandas-profiling = "^3.5.0"
plotly = "^5.11.0"
python = "~3.10"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
sympy = "^1.11.1"
torch = "^1.13.1"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
coverage = "^6.4.4"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
types-colorama = "^0.4.15"
types-Pygments = "^2.13.1"
types-setuptools = "^65.6.0"

[tool.poetry.group.dev.dependencies]
types-pillow = "^9.3.0.4"
types-tabulate = "^0.9.0.0"
types-tqdm = "^4.64.7.9"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | data
  | notebooks
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true
verbose = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --log-level=CRITICAL"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
